package chapter_09.employee_management;

import java.util.List;

public class EmployeeData {

    public static List<Employee> getSampleEmployees() {
        return List.of(
                new Employee(101, "Alice Johnson", "Engineering", 90000.0),
                new Employee(102, "Bob Smith", "Marketing", 70000.0),
                new Employee(103, "Charlie Williams", "Sales", 65000.0),
                new Employee(104, "Diana Brown", "HR", 75000.0),
                new Employee(105, "Edward Jones", "Engineering", 80000.0),
                new Employee(106, "Fiona Davis", "Marketing", 72000.0),
                new Employee(107, "George Wilson", "Sales", 67000.0),
                new Employee(108, "Hannah Moore", "HR", 73000.0),
                new Employee(109, "Ian Taylor", "Engineering", 88000.0),
                new Employee(110, "Jane Anderson", "Marketing", 71000.0),
                new Employee(111, "Kevin Thomas", "Sales", 66000.0),
                new Employee(112, "Laura Jackson", "HR", 74000.0),
                new Employee(113, "Michael White", "Engineering", 87000.0),
                new Employee(114, "Nina Harris", "Marketing", 73000.0),
                new Employee(115, "Oscar Clark", "Sales", 68000.0),
                new Employee(116, "Paula Lewis", "HR", 76000.0),
                new Employee(117, "Quincy Lee", "Engineering", 89000.0),
                new Employee(118, "Rachel Walker", "Marketing", 74000.0),
                new Employee(119, "Steven Hall", "Sales", 69000.0),
                new Employee(120, "Tina Young", "HR", 77000.0),
                new Employee(121, "Ursula King", "Engineering", 91000.0),
                new Employee(122, "Victor Wright", "Marketing", 75000.0),
                new Employee(123, "Wendy Green", "Sales", 70000.0),
                new Employee(124, "Xander Scott", "HR", 78000.0),
                new Employee(125, "Yvonne Adams", "Engineering", 92000.0),
                new Employee(126, "Zachary Baker", "Marketing", 76000.0),
                new Employee(127, "Adam Carter", "Sales", 71000.0),
                new Employee(128, "Beth Evans", "HR", 79000.0),
                new Employee(129, "Carlos Rivera", "Engineering", 93000.0),
                new Employee(130, "Daisy Roberts", "Marketing", 77000.0)
        );
    }
}
